# GenAI_based_Fitness_Trainer

./: README.md  app.py  pyproject.toml  requirements.txt
